# dota2draft

./: .gitignore  Cargo.toml  HERO_DATA_GUIDE.md  README.md  dev-server.js  fix_attributes.py  how_it_work.md  package-lock.json  package.json
.github/workflows/: build.yml
data/: dota_heroes_stratz.json  roles.json  synergies.json
data/heroes/: abaddon.json  alchemist.json  ancient_apparition.json  anti_mage.json  arc_warden.json  axe.json  bane.json  batrider.json  beastmaster.json  bloodseeker.json  bounty_hunter.json  brewmaster.json  bristleback.json  broodmother.json  centaur_warrunner.json  chaos_knight.json  chen.json  clinkz.json  clockwerk.json  crystal_maiden.json  dark_seer.json  dark_willow.json  dawnbreaker.json  dazzle.json  death_prophet.json  disruptor.json  doom.json  dragon_knight.json  drow_ranger.json  earth_spirit.json  earthshaker.json  elder_titan.json  ember_spirit.json  enchantress.json  enigma.json  (+92 more)
rules/: DEPLOYMENT_GUIDE.md  INSTALLATION_AND_RELEASE.md  PROJECT_SETUP.md  PROJECT_STRUCTURE.md  README_QUICK_START.md  RELEASE_GUIDE.md  SETUP_CHECKLIST.md  TAURI_SETUP.md  hero_icons.md
scripts/: audit_data_rules.py  build-release.bat  build-release.py  dev-server.js
src/: analysis.rs  drafter.rs  generate_synergy_rules.py  lib.rs  loader.rs  main.rs  model.rs  scoring.rs  stratz_hero_requests.py  update_heroes_data.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: example1.html  example2.html  example3.html  example4.html  example5.html  example6.html  index.html
(+1 files in other folders)
