[package]
name = "dota2draft"
version = "0.2.0"
edition = "2021"

[lib]
name = "dota2draft"
path = "src/lib.rs"

[[bin]]
name = "dota2draft"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0" }
serde_json = "1.0"
reqwest = { version = "0.11" } # HTTP клиент
tokio = { version = "1" }   # Асинхронность
futures = "0.3" # Для работы с потоками (аналог ThreadPool)