[package]
name = "dota2draft-tauri"
version = "0.1.0"
description = "Dota2 Draft Analyzer"
authors = ["author"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-shell = "2.0"
dota2draft = { path = ".." }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

